<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.smallrye</groupId>
        <artifactId>smallrye-parent</artifactId>
        <version>51</version>
    </parent>

    <groupId>io.smallrye.ai</groupId>
    <artifactId>acp-java-parent</artifactId>
    <version>0.1.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>Smallrye Agent Client Protocol - Java project</description>
    <name>Smallrye AI :: Agent Client Protocol :: Java SDK :: Parent</name>

    <inceptionYear>2026</inceptionYear>
    <organization>
        <name>SmallRye</name>
        <url>https://wwww.smallrye.io</url>
    </organization>

    <licenses>
        <license>
            <distribution>repo</distribution>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>snowdrop</id>
            <name>Snowdrop Team</name>
        </developer>
        <developer>
            <id>cmoullia</id>
            <name>Charles Moulliard</name>
            <email>cmoulliard@ibm.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:smallrye/smallrye-acp-client.git</connection>
        <developerConnection>scm:git:git@github.com:smallrye/smallrye-acp-client.git</developerConnection>
        <url>https://github.com/smallrye/smallrye-acp-client.git</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>schema</module>
        <module>registry</module>
        <module>core</module>
        <module>client</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven-compiler-plugin.release>21</maven-compiler-plugin.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <quarkus.platform.version>3.38.3</quarkus.platform.version>

        <maven-compiler-plugin>3.15.0</maven-compiler-plugin>
        <exec-maven-plugin>3.6.3</exec-maven-plugin>
        <maven-source-plugin>3.4.0</maven-source-plugin>
        <maven-surefire-plugin>3.5.6</maven-surefire-plugin>
        <maven-javadoc-plugin>3.12.0</maven-javadoc-plugin>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Quarkus BOM -->
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Project modules -->
            <dependency>
                <groupId>io.smallrye.ai</groupId>
                <artifactId>acp-client-schema</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye.ai</groupId>
                <artifactId>acp-java-registry</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye.ai</groupId>
                <artifactId>acp-client-core</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin}</version>
                <configuration>
                    <release>${maven-compiler-plugin.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin}</version>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <release>${maven-compiler-plugin.release}</release>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin}</version>
                <configuration>
                    <attach>true</attach>
                    <forceCreation>true</forceCreation>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
